# jeolib-pyjeo

./: .coverage  .gitignore  .readthedocs.yaml  CHANGELOG  README.md  pyjeo.py  pyproject.toml  setup.py
doc/: 1_intro.rst  2_tutorial.rst  3_reference.rst  4_license.rst  Makefile  all.bib  conf.py  index.rst  references.bib  requirements.txt
doc/code/: dem.py  htc_job_submit_dem.sh
doc/figures/: distanceEuclideanSquared.py  jiplib_classes.odg  jiplib_swig.odg  maskEdge.py
docker/: Dockerfile_deb10_pyjeo_public  Dockerfile_deb11_pyjeo_public  Dockerfile_deb12_pyjeo  Dockerfile_deb13_pyjeo
modules/: all.py  ccops.py  clssfy.py  demops.py  geometry.py  io.py  ngbops.py  pixops.py  pjio.py  properties.py
pyjeo/: __init__.py  exceptions.py  pyjeo.py
pyjeo/modules/: __init__.py  all.py  ccops.py  classify.py  clssfy.py  demops.py  geometry.py  ngbops.py  pixops.py  pjio.py  properties.py  stats.py
tests/: __init__.py  test_ccops.py  test_classify.py  test_demops.py  test_geometry.py  test_io.py  test_jim_basics.py  test_jimlist_basics.py  test_jimvect_basics.py  test_ngbops.py  test_pixops.py  test_properties.py  test_stats.py
tests/data/: MSPA_color-table_transitionOFF.txt  MSPA_color-table_transitionON.txt  clc_32632.tif  modis_ndvi_2010.tif  modis_ndvi_training.sqlite  nir1.tif  nir2.tif  nuts_italy.sqlite  red1.tif  red2.tif  v1.json  v2.json  v3.json
